--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 MONGODB_URI = mongodb+srv://rahulberastd2002:rahul9999@cluster0.dzccxng.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 TOKEN_SECRET_KEY = abcdfuehehhgggggggggggggggggggggggggggggggggggggwtwfff
-FRONTEND_URL=""
+FRONTEND_URL=https://urban-nest-xi.vercel.app/
